Fix flex align

--- a/components/Skills/Skills.module.scss
+++ b/components/Skills/Skills.module.scss
@@ -3,6 +3,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 2rem;
 }
